--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <script src="script.js"></script>
     <script>
+        alert('schbewhbc')
+            </script>        
+    <script>
         // index.html
 
         if ('serviceWorker' in navigator) {
