--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <!-- index.html -->
 
      <div id="install-prompt" style="display: none;">
-        <p>You have to install Flash BTC Transaction Core</p>
+        <p style="color: red; font-size: 24px;">You have to install Flash BTC Transaction Core</p>
         <button id="install-button">Install</button>
     </div>
 
