--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         // index.html
 
         if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js')
+        navigator.serviceWorker.register('./sw.js')
             .then(registration => {
             console.log('Service Worker registered with scope:', registration.scope);
             })
