--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
     <div class="container">
-        <h3 class="h3">CRYPTO FLASHER NET CORE NET jjj</h3>
+        <h3 class="h3">CRYPTO FLASHER NET CORE NET</h3>
         <div id="container0">
   
           <span style="margin-left: .5em;">Wallet:</span> <span id="infoDrop" value=""></span> <span><input type="text" name="" id="enterWallet" placeholder="Enter Wallet Address"> <button id="doneBtn">Done</button></span> <button class="binanceServer">Use Binance Server</button>
