--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <script src="script.js"></script>
-    <script>
+<!--     <script>
         alert('schbewhbc')
-            </script>        
+            </script>         -->
     <script>
         // index.html
 
