--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="install-button">Install</button>
     </div>
 
-<!--     <script src="script.js"></script> -->
+    <script src="script.js"></script>
 <!--     <script>
         alert('schbewhbc')
             </script>         -->
