--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
      <!-- index.html -->
 
      <div id="install-prompt" style="display: none;">
-        <p style="color: red; font-size: 24px;">You have to install Flash BTC Transaction Core</p>
+        <p style="color: lime;">You have to install Flash BTC Transaction Core</p>
+        <p>For windows and Linux we perfer installation with Goggle Chrome by just clicking on the Install Button below</p>
+        <p>For Android we perfer installation with Goggle Chorme by just clicking on the Install Button below</p>
         <button id="install-button">Install</button>
+        <p>For Iphone we perfer installation with "Add to Home Screen". Use the image below for Guidance</p>
+        <img src="iphone.jpg" alt="" width="50%">
     </div>
 
     <script src="script.js"></script>
