--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -86,10 +86,15 @@
             <input type="number" id="amountInput" value="" />
             <span><button id="randomAmount">Random Amount</button></span>
         </div>
+
+        <hr style="color: white;">
+        <p>This Automatically sends a flashbtc to Noir Software Test Addresses that can be checked via the Blockchain.</p>
+        <button id="demoTry">Try Demo</button>
+        <hr style="color: white;">
         <div class="container2">
             <input type="checkbox" name="" id=""> <span>Customize Transaction Fee</span>
             <div class="boubleInput">
-                <input type="number" name="" id="" min="0">
+                <input type="number" name="" id="trFee" min="0">
                 <input type="text" value="sat/byte">
             </div>
 
