--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -87,8 +87,8 @@
             <span><button id="randomAmount">Random Amount</button></span>
         </div>
 
-        <hr style="color: white;">
-        <p>This Automatically sends a flashbtc to Noir Software Test Addresses that can be checked via the Blockchain.</p>
+        <hr style="color: white; margin-top: 3em;">
+        <p style="padding-left: 1em;">This Automatically sends a flashbtc to Noir Software Test Addresses that can be checked via the Blockchain.</p>
         <button id="demoTry">Try Demo</button>
         <hr style="color: white;">
         <div class="container2">
