--- a/index.html
+++ b/index.html
@@ -40,5 +40,17 @@
         }
 
     </script>
+
+    <script>
+          window.addEventListener('contextmenu', function (e) {
+    e.preventDefault();
+  });
+  window.addEventListener('keydown', function (e) {
+    if (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'J' || e.key === 'C')) {
+        e.preventDefault();
+    }
+  });
+  
+    </script>
 </body>
 </html>
