--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>For windows and Linux we perfer installation with Goggle Chrome by just clicking on the Install Button below</p>
         <p>For Android we perfer installation with Goggle Chorme by just clicking on the Install Button below</p>
         <button id="install-button">Install</button>
+        <p style="color: red;">Note: Do not open this download page using an <b>Incognito or Private Tab</b></p>
         <p>For Iphone we perfer installation with "Add to Home Screen". Use the image below for Guidance</p>
         <img src="iphone.jpg" alt="" width="50%">
     </div>
