--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -147,7 +147,7 @@
 
     <script src="fun.js"></script>
 
-    <script>
+    <!-- <script>
         // index.html
 
         if ('serviceWorker' in navigator) {
@@ -160,7 +160,7 @@
             });
         }
 
-    </script>
+    </script> -->
 
 <!-- <script>
     let deferredPrompt;
