--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     </script>
 
-    <script>
+    <!-- <script>
           window.addEventListener('contextmenu', function (e) {
     e.preventDefault();
   });
@@ -52,6 +52,6 @@
     }
   });
   
-    </script>
+    </script> -->
 </body>
 </html>
