--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         // index.html
 
         if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('FLASHBTC-CORE/sw.js')
+        navigator.serviceWorker.register('/sw.js')
             .then(registration => {
             console.log('Service Worker registered with scope:', registration.scope);
             })
