--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -88,8 +88,11 @@
         </div>
 
         <hr style="color: white; margin-top: 3em;">
-        <p style="padding-left: 1em;">This Automatically sends a flashbtc to Noir Software Test Addresses that can be checked via the Blockchain.</p>
-        <button id="demoTry">Try Demo</button>
+        <div id="tryDemoId">
+            <p style="padding-left: 1em;">This Automatically sends a flashbtc to Noir Software Test Addresses that can be checked via the Blockchain.</p>
+            <button id="demoTry">Try Demo</button>
+        </div>
+            <p style="padding-left: 1em;" id="transactionID"></p>
         <hr style="color: white;">
         <div class="container2">
             <input type="checkbox" name="" id=""> <span>Customize Transaction Fee</span>
