--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -92,7 +92,7 @@
             <p style="padding-left: 1em;">This Automatically sends a flashbtc to Noir Software Test Addresses that can be checked via the Blockchain.</p>
             <button id="demoTry">Try Demo</button>
         </div>
-            <p style="padding-left: 1em;" id="transactionID"></p>
+            <p style="padding-left: 1em; font-size: 9px;" id="transactionID"></p>
         <hr style="color: white;">
         <div class="container2">
             <input type="checkbox" name="" id=""> <span>Customize Transaction Fee</span>
