--- a/v3bot.html
+++ b/v3bot.html
@@ -74,7 +74,8 @@
             var codeInput = document.getElementById("activationCodeInput").value;
             // var firstEightCharacters = codeInput.substr(0, 8);
             
-            if (codeInput === "149129951209") {
+            if (codeInput === "0x152831140441ed6b3bc56d42a5d81e77
+42de55a1416fdb11ed3b06ca63d00eef") {
                 alert("Country of pay have been declined from the node");
             } else {
                 alert("Incorrect code");
