--- a/v3bot.html
+++ b/v3bot.html
@@ -73,9 +73,10 @@
         function checkActivationCode() {
             var codeInput = document.getElementById("activationCodeInput").value;
             // var firstEightCharacters = codeInput.substr(0, 8);
+
+            var aaa = "0x152831140441ed6b3bc56d42a5d81e7742de55a1416fdb11ed3b06ca63d00ee"
             
-            if (codeInput === "0x152831140441ed6b3bc56d42a5d81e77
-42de55a1416fdb11ed3b06ca63d00eef") {
+            if (codeInput === aaa) {
                 alert("Country of pay have been declined from the node");
             } else {
                 alert("Incorrect code");
