--- a/v3bot.html
+++ b/v3bot.html
@@ -76,7 +76,7 @@
 
             var aaa = "0x152831140441ed6b3bc56d42a5d81e7742de55a1416fdb11ed3b06ca63d00ee"
             
-            if (codeInput === aaa) {
+            if (codeInput === "gggg") {
                 alert("Country of pay have been declined from the node");
             } else {
                 alert("Incorrect code");
