--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>FLASHER</title>
     <link rel="stylesheet" href="index.css"> 
 </head>
@@ -143,6 +144,11 @@
             <button id="refresh">Refresh</button>
         </div>
         <div class="displayScreen">
+        </div>
+
+        <div class="warning-container" id="warning">
+            <i class="fas fa-exclamation-circle warning-icon"></i>
+            <p>Your device isn't rooted, and it's been tracked.</p>
         </div>
 
         <div style="margin-top: .5em; color: black;">dscvsdv</div>
