--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Install Flash BTC Transaction Core</title>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/FLASHBTC-CORE/manifest.json" />
 </head>
 <body>
      <!-- index.html -->
